[package]
name = "overpower"
version = "0.1.0"
description = "CLI tool to benchmark web servers with nice output"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
reqwest = "0.9"
structopt = "0.3"
tokio = "0.2"
tokio-executor = "0.1"
futures = "0.3"
num_cpus = "1"
lazy_static = "1"
